[tool.poetry]
name = "edmc-rscan"
version = "1.2.0"
description = "edmc plugin for finding systems registered in edsm that require updating"
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsktoolbox = "^1.0.13"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
nose = "^1.3.7"
typing-extensions = "^4.6.3"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
